# csa-4

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: cat.s  counter.s  double.s  hello.s  hello_user_name.s  sort.s  sum_square_dif.s
schemas/: CU.drawio  risk-machine.drawio
src/: isa.py  machine.py  main.py  utils.py
src/translator/: tokenizer.py  translator.py
tests/: test_golden.py
tests/golden/: cat.yml  counter.yml  double.yml  hello.yml  hello_user_name.yml  sort.yml  sum_square_dif.yml
