[project]
name = "lab4-csa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "pytest-golden>=1.0.1",
    "ruff>=0.15.17",
    "pyyaml>=6.0.3",
    "types-pyyaml>=6.0.12.20260518"
]

[tool.mypy]
strict = true
explicit_package_bases = true
namespace_packages = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/utils.py" = ["B905"]
"tests/test_golden.py" = ["E402"]
